[package]
name = "ach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "2.2.2"
aur-depends = "3.0.0"
clap = "4.3.15"
colored = "2.0.4"
flate2 = "1.0.26"
raur = "7.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tar = "0.4.39"
whoami = "1.4.1"
